// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPage /> should renders correctly 1`] = `
<commonstyle__Container
  disabled={false}
>
  <h3>
    global.contenu
  </h3>
  <style__PreviewContainer>
    <p>
      global.preview
    </p>
    <button
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#000"
        name="browser"
        size={15}
      />
      <span>
        on-browser
      </span>
    </button>
    <button
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#000"
        name="letter"
        size={15}
      />
      <span>
        by-mail
      </span>
    </button>
  </style__PreviewContainer>
  <Field
    component={[Function]}
    disableValidation={true}
    disabled={false}
    id="mailSubject"
    label="mail-subject"
    name="mailSubject"
    type="text"
  />
  <Field
    component={[Function]}
    disableValidation={true}
    disabled={false}
    fieldUsingJoditWysiwyg={true}
    id="mailContent"
    label="mail-content"
    name="mailContent"
    type="admin-editor"
  />
  <Relay(PreviewMail)
    emailingCampaign={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
    reference={
      Object {
        "current": null,
      }
    }
  />
</commonstyle__Container>
`;

exports[`<ContentPage /> should renders correctly when disabled 1`] = `
<commonstyle__Container
  disabled={true}
>
  <h3>
    global.contenu
  </h3>
  <style__PreviewContainer>
    <p>
      global.preview
    </p>
    <button
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#000"
        name="browser"
        size={15}
      />
      <span>
        on-browser
      </span>
    </button>
    <button
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#000"
        name="letter"
        size={15}
      />
      <span>
        by-mail
      </span>
    </button>
  </style__PreviewContainer>
  <Field
    component={[Function]}
    disableValidation={true}
    disabled={true}
    id="mailSubject"
    label="mail-subject"
    name="mailSubject"
    type="text"
  />
  <Field
    component={[Function]}
    disableValidation={true}
    disabled={true}
    fieldUsingJoditWysiwyg={true}
    id="mailContent"
    label="mail-content"
    name="mailContent"
    type="admin-editor"
  />
  <Relay(PreviewMail)
    emailingCampaign={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
    reference={
      Object {
        "current": null,
      }
    }
  />
</commonstyle__Container>
`;

exports[`<ContentPage /> should renders correctly when error 1`] = `
<commonstyle__Container
  disabled={false}
>
  <h3>
    global.contenu
  </h3>
  <style__PreviewContainer>
    <p>
      global.preview
    </p>
    <button
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#000"
        name="browser"
        size={15}
      />
      <span>
        on-browser
      </span>
    </button>
    <button
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#000"
        name="letter"
        size={15}
      />
      <span>
        by-mail
      </span>
    </button>
  </style__PreviewContainer>
  <Field
    component={[Function]}
    disableValidation={false}
    disabled={false}
    id="mailSubject"
    label="mail-subject"
    name="mailSubject"
    type="text"
  />
  <Field
    component={[Function]}
    disableValidation={false}
    disabled={false}
    fieldUsingJoditWysiwyg={true}
    id="mailContent"
    label="mail-content"
    name="mailContent"
    type="admin-editor"
  />
  <Relay(PreviewMail)
    emailingCampaign={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
    reference={
      Object {
        "current": null,
      }
    }
  />
</commonstyle__Container>
`;
